[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Caps/CapBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Caps/Frames/Attack/A.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/RetroGamingFont.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Themes/CardName.tres" type="Theme" id=4]

[node name="CapBase" type="MarginContainer"]
margin_left = -353.0
margin_top = 19.0
margin_right = -103.0
margin_bottom = 269.0
rect_pivot_offset = Vector2( 125, 125 )
script = ExtResource( 1 )

[node name="Art" type="Sprite" parent="."]
centered = false

[node name="Frame" type="Sprite" parent="."]
scale = Vector2( 0.488, 0.488 )
texture = ExtResource( 2 )
centered = false

[node name="Name" type="Label" parent="Frame"]
margin_left = 112.705
margin_top = 320.0
margin_right = 402.705
margin_bottom = 375.0
theme = ExtResource( 4 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Damage" type="Label" parent="Frame"]
margin_left = 79.918
margin_top = 163.934
margin_right = 149.918
margin_bottom = 233.934
theme = ExtResource( 3 )
text = "30"
align = 1
valign = 1

[node name="Text" type="VBoxContainer" parent="."]
visible = false
margin_right = 250.0
margin_bottom = 250.0

[node name="TopGap" type="MarginContainer" parent="Text"]
margin_right = 250.0
margin_bottom = 76.0
rect_min_size = Vector2( 25, 0 )
custom_constants/margin_top = 76
custom_constants/margin_left = 250

[node name="DmgRow" type="HBoxContainer" parent="Text"]
margin_top = 80.0
margin_right = 250.0
margin_bottom = 116.0

[node name="LeftGap" type="MarginContainer" parent="Text/DmgRow"]
margin_right = 29.0
margin_bottom = 36.0
custom_constants/margin_right = 29

[node name="Stat" type="MarginContainer" parent="Text/DmgRow"]
margin_left = 33.0
margin_right = 79.0
margin_bottom = 36.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="Text/DmgRow/Stat"]
margin_right = 62.0
margin_bottom = 51.0
rect_min_size = Vector2( 46, 0 )
text = "33"
align = 1
valign = 1

[node name="RightGap" type="MarginContainer" parent="Text/DmgRow"]
margin_left = 83.0
margin_right = 121.0
margin_bottom = 36.0
custom_constants/margin_right = 38

[node name="MidGap" type="MarginContainer" parent="Text"]
margin_top = 120.0
margin_right = 250.0
margin_bottom = 150.0
custom_constants/margin_top = 30

[node name="NameRow" type="HBoxContainer" parent="Text"]
margin_top = 154.0
margin_right = 250.0
margin_bottom = 184.0

[node name="LeftGap" type="MarginContainer" parent="Text/NameRow"]
margin_right = 50.0
margin_bottom = 30.0
custom_constants/margin_right = 50

[node name="Name" type="MarginContainer" parent="Text/NameRow"]
margin_left = 54.0
margin_right = 194.0
margin_bottom = 30.0
theme = ExtResource( 4 )

[node name="Label" type="Label" parent="Text/NameRow/Name"]
margin_right = 140.0
margin_bottom = 30.0
rect_min_size = Vector2( 140, 30 )
text = "Double Underhook Powerbomb"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Focus" type="TextureButton" parent="."]
margin_right = 250.0
margin_bottom = 250.0

[node name="Tween" type="Tween" parent="."]
playback_speed = 2.0
playback/speed = 2.0

[connection signal="button_down" from="Focus" to="." method="_on_button_down"]
[connection signal="button_up" from="Focus" to="." method="_on_Focus_button_up"]
[connection signal="mouse_entered" from="Focus" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Focus" to="." method="_on_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
